@@ -100,8 +100,9 @@ namespace DangIt
 
         protected void EmptyEvaSuit(Part evaPart, Part container)
         {
+            ProtoCrewMember evaKerbal = DangIt.FindEVAProtoCrewMember();
 #if DEBUG
-            this.Log("Emptying the EVA suit from " + evaPart.name + " to " + container.name);
+            this.Log("Emptying the EVA suit from " + evaKerbal.name + " to " + container.name);
 #endif
             // Compute how much can be left in the container
             double capacity = container.Resources[DangIt.Spares.Name].maxAmount - container.Resources[DangIt.Spares.Name].amount;
@@ -112,7 +113,7 @@ namespace DangIt
             evaPart.RequestResource(DangIt.Spares.Name, deposit);
 
             // GUI acknowledge
-            DangIt.Broadcast(evaPart.name + " has left " + deposit + " spares", false, 1f);
+            DangIt.Broadcast(evaKerbal.name + " has left " + deposit + " spares", false, 1f);
             ResourceDisplay.Instance.Refresh();
         }
 
@@ -120,6 +121,8 @@ namespace DangIt
 
         protected void FillEvaSuit(Part evaPart, Part container)
         {
+            ProtoCrewMember evaKerbal = DangIt.FindEVAProtoCrewMember();
+
             // Check if the EVA part contains the spare parts resource: if not, add a new config node
             if (!evaPart.Resources.Contains(DangIt.Spares.Name))
             {
@@ -143,7 +146,7 @@ namespace DangIt
             evaPart.RequestResource(DangIt.Spares.Name, -amountTaken);
 
             // GUI stuff
-            DangIt.Broadcast(evaPart.name + " has taken " + amountTaken + " spares", false, 1f);
+            DangIt.Broadcast(evaKerbal.name + " has taken " + amountTaken + " spares", false, 1f);
             ResourceDisplay.Instance.Refresh();
         }
 
