@@ -4,7 +4,19 @@
     {
         name = ModuleEngineReliability
         MTBF = 16000
-        LifeTime = 10
+        LifeTime = 1
+        RepairCost = 10
+		Silent = false
+    }
+}
+
+@PART[*]:HAS[@MODULE[ModuleEnginesFX]:HAS[!PROPELLANT[SolidFuel]]]:FOR[DangIt]
+{
+    MODULE
+    {
+        name = ModuleEngineFXReliability
+        MTBF = 16000
+        LifeTime = 1
         RepairCost = 10
 		Silent = false
     }
