@@ -1,8 +1,9 @@
 === ALPHA 3 ===
 
+Fixed the name that is displayed for a kerbal during EVA events.
+Added support for engines that use ModuleEngineFX.
 Added inspection: you can now inspect a part on EVA and get a message with a rough indication of the state of the part. Still hideous, but functional.
 Timewarp now stops when a failure occurs.
-
 Fixed the bug where the leak message was logged incorrectly in the flight log.
 Fixed the formatting of the flight log messages.
 
